<resources>
    <string name="app_name">Task</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--    Common-->
    <string name="e_mail_fragment">E-mail</string>
    <string name="example_e_mail">email@example.com</string>
    <string name="empty_email">The email field cannot be empty</string>
    <string name="secret_password">********</string>
    <string name="password_fragment">Password</string>
    <string name="error_generic">Have one problem, try again later.</string>


    <!--Login Fragment-->
    <string name="login">Login</string>
    <string name="create_account">Create Account</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="logo">Logo RosaCha</string>
    <string name="empty_password">The password field cannot be empty</string>
    <string name="not_login">Login not successful, check your email and password</string>

    <!--    Recovery Fragment-->
    <string name="recovery_account">Recovery account</string>
    <string name="inform_page">Enter your email to receive a link and password change</string>
    <string name="send">Send</string>
    <string name="sent_email">Link sent successfully, check your inbox</string>

    <!--    Register Fragment-->
    <string name="create_an_account">Create an account</string>
    <string name="register">Register</string>
    <string name="check_password">Passwords must be the same</string>
    <string name="empty_fields">Fields cannot be empt</string>

    <!--    Home Fragment-->
    <string name="to_do">To do</string>
    <string name="doing">Doing</string>
    <string name="done">Done</string>
    <string name="logout">Logout</string>

    <!--    errors Firebase Athentication-->
    <string name="account_not_registered_register_fragment">There is no user record corresponding to this identifier.</string>
    <string name="invalid_email_register_fragment">The email address is badly formatted.</string>
    <string name="invalid_password_register_fragment">The password is invalid or the user does not have a password.</string>
    <string name="email_in_use_register_fragment">The email address is already in use by another account.</string>
    <string name="strong_password_register_fragment">The given password is invalid.</string>

    <!--    Form task Fragment-->
    <string name="text_title_form_task_fragment">New Task</string>
    <string name="text_text_form_task_fragment">Task</string>


</resources>